--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,12 @@
     <title>Vedant Tours | Blog</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Book car rentals, hotels, and tourism packages across India. Get the best deals on travel and explore top destinations hassle-free.">
-    <meta name="keywords" content="car rental India, car rental rajasthan, car rental udaipur, hotel booking India, tourism packages, travel deals, India tour, car hire, best hotels, holiday packages">
+
+    <meta name="description" content="🚗✨ Explore India with top-rated car rentals, luxury hotels, and exclusive travel deals! Book now for a hassle-free adventure and unbeatable prices! 🌍🔥">
+
+
+    <meta name="keywords" content="car rental Udaipur, taxi services Udaipur, car hire Rajasthan, India car rental, best car rental services, Udaipur sightseeing taxi, hotel booking India, luxury car rental, Rajasthan tour packages, budget car hire, self-drive cars Udaipur, airport taxi Udaipur, India travel deals, holiday packages, best hotels in India, tourist taxi service, affordable car rental, travel agency Udaipur, taxi service rajasthan, car rental rajasthan, car hire udaipur, car rental best deals, vadent tours, vedanttours, vedant tour, vedanttour, vedanttours.com">
+
     <meta name="author" content="Vedant Tours">
     <meta name="robots" content="index, follow">
     
@@ -50,7 +54,7 @@
 	          <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
+	          <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li> -->
 	          <li class="nav-item"><a href="car.html" class="nav-link">Cars</a></li>
 	          <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -77,69 +81,69 @@
         <div class="row d-flex justify-content-center">
           <div class="col-md-12 text-center d-flex ftco-animate">
           	<div class="blog-entry justify-content-end mb-md-5">
-              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_1.jpg');">
+              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/sagar-lake.png');">
               </a>
               <div class="text px-md-5 pt-4">
-              	<div class="meta mb-3">
+              	<!-- <div class="meta mb-3">
                   <div><a href="#">Oct. 29, 2019</a></div>
                   <div><a href="#">Admin</a></div>
                   <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                </div>
-                <h3 class="heading mt-2"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p>
+                </div> -->
+                <h3 class="heading mt-2">Fateh Sagar Lake</h3>
+                <p>Fateh Sagar Lake is situated in the city of Udaipur in the Indian state of Rajasthan. It is an artificial lake named after Maharana Fateh Singh of Udaipur and Mewar, constructed north-west of Udaipur, to the north of Lake Pichola in the 1680s.</p>
+                <p><a href="https://en.wikipedia.org/wiki/Fateh_Sagar_Lake" class="btn btn-primary" target="_blank">Continue <span class="icon-long-arrow-right"></span></a></p>
               </div>
             </div>
           </div>
-          <!-- <div class="col-md-12 text-center d-flex ftco-animate">
+          <div class="col-md-12 text-center d-flex ftco-animate">
           	<div class="blog-entry justify-content-end mb-md-5">
-              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_2.jpg');">
+              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/city-place-udaypur.png');">
               </a>
               <div class="text px-md-5 pt-4">
-              	<div class="meta mb-3">
+              	<!-- <div class="meta mb-3">
                   <div><a href="#">Oct. 29, 2019</a></div>
                   <div><a href="#">Admin</a></div>
                   <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                </div>
-                <h3 class="heading mt-2"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p>
+                </div> -->
+                <h3 class="heading mt-2">City Place - Udaypur</h3>
+                <p>City Palace (Raj Mahal), Udaipur is a palace complex situated in the city of Udaipur in the Indian state of Rajasthan. It was built over a period of nearly 400 years, with contributions from several rulers of the Mewar dynasty. Its construction began in 1553, started by Maharana Udai Singh II of the Sisodia Rajput family as he shifted his capital from the erstwhile Chittor to the newfound city of Udaipur.</p>
+                <p><a href="https://en.wikipedia.org/wiki/City_Palace,_Udaipur" class="btn btn-primary" target="_blank">Continue <span class="icon-long-arrow-right"></span></a></p>
               </div>
             </div>
-          </div> -->
-          <!-- <div class="col-md-12 text-center d-flex ftco-animate">
+          </div>
+          <div class="col-md-12 text-center d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_3.jpg');">
+              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/JagMandir.jpg');">
               </a>
               <div class="text px-md-5 pt-4">
-              	<div class="meta mb-3">
+              	<!-- <div class="meta mb-3">
                   <div><a href="#">Oct. 29, 2019</a></div>
                   <div><a href="#">Admin</a></div>
                   <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                </div>
-                <h3 class="heading mt-2"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p>
+                </div> -->
+                <h3 class="heading mt-2">Jag Mandir Palace</h3>
+                <p>Jag Mandir is a palace built on an island in the Lake Pichola. It is also called the "Lake Garden Palace". The palace is located in Udaipur city in the Indian state of Rajasthan. Its construction is credited to three Maharanas of the Sisodia Rajputs of Mewar kingdom. The construction of the palace was started in 1551 by Maharana Amar Singh and was finally completed by Maharana Jagat Singh I (1628–1652). </p>
+                <p><a href="https://en.wikipedia.org/wiki/Jag_Mandir_Palace" class="btn btn-primary" target="_blank">Continue <span class="icon-long-arrow-right"></span></a></p>
               </div>
             </div>
           </div>
           <div class="col-md-12 text-center d-flex ftco-animate">
           	<div class="blog-entry justify-content-end mb-md-5">
-              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_4.jpg');">
+              <a href="blog-single.html" class="block-20 img" style="background-image: url('images/Sukhadia_circle\,_Udaipur\,_Rajasthan.jpg');">
               </a>
               <div class="text px-md-5 pt-4">
-              	<div class="meta mb-3">
+              	<!-- <div class="meta mb-3">
                   <div><a href="#">Oct. 29, 2019</a></div>
                   <div><a href="#">Admin</a></div>
                   <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                </div>
-                <h3 class="heading mt-2"><a href="#">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                <p><a href="blog-single.html" class="btn btn-primary">Continue <span class="icon-long-arrow-right"></span></a></p>
+                </div> -->
+                <h3 class="heading mt-2">Sukhadia Circle</h3>
+                <p>Sukhadia Circle (Square) is a popular recreational centre in Udaipur in Indian state of Rajasthan. It is a large roundabout in the city's northern suburb of Panchwati, on the road to Ranakpur and Mt. Abu. It providing options for fast food centers, camel and horse rides, boat ride and kids play zone areas.</p>
+                <p><a href="https://en.wikipedia.org/wiki/Sukhadia_Circle" class="btn btn-primary" target="_blank">Continue <span class="icon-long-arrow-right"></span></a></p>
               </div>
             </div>
           </div>
-          <div class="col-md-12 text-center d-flex ftco-animate">
+         <!-- <div class="col-md-12 text-center d-flex ftco-animate">
           	<div class="blog-entry justify-content-end mb-md-5">
               <a href="blog-single.html" class="block-20 img" style="background-image: url('images/image_5.jpg');">
               </a>
