--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <title>Vedant Tours - A Car Service Platform.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Book car rentals, hotels, and tourism packages across India. Get the best deals on travel and explore top destinations hassle-free.">
-    <meta name="keywords" content="car rental India, car rental rajasthan, car rental udaipur, hotel booking India, tourism packages, travel deals, India tour, car hire, best hotels, holiday packages">
+
+    <meta name="description" content="🚗✨ Explore India with top-rated car rentals, luxury hotels, and exclusive travel deals! Book now for a hassle-free adventure and unbeatable prices! 🌍🔥">
+
+
+    <meta name="keywords" content="car rental Udaipur, taxi services Udaipur, car hire Rajasthan, India car rental, best car rental services, Udaipur sightseeing taxi, hotel booking India, luxury car rental, Rajasthan tour packages, budget car hire, self-drive cars Udaipur, airport taxi Udaipur, India travel deals, holiday packages, best hotels in India, tourist taxi service, affordable car rental, travel agency Udaipur, taxi service rajasthan, car rental rajasthan, car hire udaipur, car rental best deals, vadent tours, vedanttours, vedant tour, vedanttour, vedanttours.com">
+
     <meta name="author" content="Vedant Tours">
     <meta name="robots" content="index, follow">
     
@@ -51,7 +55,7 @@
 	          <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
+	          <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li> -->
 	          <li class="nav-item"><a href="car.html" class="nav-link">Cars</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -178,8 +182,8 @@
 		    					<div class="text">
 		    						<h2 class="mb-0"><a href="#">Totota</a></h2>
 		    						<div class="d-flex mb-3">
-			    						<span class="cat">SUV</span>
-			    						<p class="price ml-auto">₹500 <span>/day</span></p>
+			    						<!-- <span class="cat">SUV</span>
+			    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
@@ -192,8 +196,8 @@
 		    					<div class="text">
 		    						<h2 class="mb-0"><a href="#">Fortuner</a></h2>
 		    						<div class="d-flex mb-3">
-			    						<span class="cat">SUV</span>
-			    						<p class="price ml-auto">₹500 <span>/day</span></p>
+			    						<!-- <span class="cat">SUV</span>
+			    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
@@ -206,8 +210,8 @@
 		    					<div class="text">
 		    						<h2 class="mb-0"><a href="#">Sedan</a></h2>
 		    						<div class="d-flex mb-3">
-			    						<span class="cat">SUV</span>
-			    						<p class="price ml-auto">₹500 <span>/day</span></p>
+			    						<!-- <span class="cat">SUV</span>
+			    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
@@ -220,8 +224,8 @@
 		    					<div class="text">
 		    						<h2 class="mb-0"><a href="#">BMW</a></h2>
 		    						<div class="d-flex mb-3">
-			    						<span class="cat">SUV</span>
-			    						<p class="price ml-auto">₹500 <span>/day</span></p>
+			    						<!-- <span class="cat">SUV</span>
+			    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
 		    						</div>
 		    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
 		    					</div>
