--- a/car.html
+++ b/car.html
@@ -3,7 +3,15 @@
   <head>
     <title>Vedant Tours | Best Car</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <meta name="description" content="🚗✨ Explore India with top-rated car rentals, luxury hotels, and exclusive travel deals! Book now for a hassle-free adventure and unbeatable prices! 🌍🔥">
+
+
+	<meta name="keywords" content="car rental Udaipur, taxi services Udaipur, car hire Rajasthan, India car rental, best car rental services, Udaipur sightseeing taxi, hotel booking India, luxury car rental, Rajasthan tour packages, budget car hire, self-drive cars Udaipur, airport taxi Udaipur, India travel deals, holiday packages, best hotels in India, tourist taxi service, affordable car rental, travel agency Udaipur, taxi service rajasthan, car rental rajasthan, car hire udaipur, car rental best deals, vadent tours, vedanttours, vedant tour, vedanttour, vedanttours.com">
+
+    <meta name="author" content="Vedant Tours">
+    <meta name="robots" content="index, follow">
 	
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
@@ -47,7 +55,7 @@
 	          <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
+	          <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li> -->
 	          <li class="nav-item active"><a href="car.html" class="nav-link">Cars</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -79,10 +87,10 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">SUV</span>
-	    						<p class="price ml-auto">₹500 <span>/day</span></p>
+	    						<!-- <span class="cat">SUV</span>
+	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<!-- <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p> -->
     					</div>
     				</div>
     			</div>
@@ -93,10 +101,10 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Range Rover</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">Subaru</span>
-	    						<p class="price ml-auto">₹500 <span>/day</span></p>
+	    						<!-- <span class="cat">Subaru</span>
+	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<!-- <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p> -->
     					</div>
     				</div>
     			</div>
@@ -107,10 +115,10 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">SUV</span>
-	    						<p class="price ml-auto">₹500 <span>/day</span></p>
+	    						<!-- <span class="cat">SUV</span>
+	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<!-- <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p> -->
     					</div>
     				</div>
     			</div>
@@ -122,10 +130,10 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">SUV</span>
-	    						<p class="price ml-auto">₹500 <span>/day</span></p>
+	    						<!-- <span class="cat">SUV</span>
+	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<!-- <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p> -->
     					</div>
     				</div>
     			</div>
@@ -136,10 +144,10 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Range Rover</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">Subaru</span>
-	    						<p class="price ml-auto">₹500 <span>/day</span></p>
+	    						<!-- <span class="cat">Subaru</span>
+	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<!-- <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p> -->
     					</div>
     				</div>
     			</div>
@@ -150,10 +158,10 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">SUV</span>
-	    						<p class="price ml-auto">₹500 <span>/day</span></p>
+	    						<!-- <span class="cat">SUV</span>
+	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<!-- <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p> -->
     					</div>
     				</div>
     			</div>
@@ -165,14 +173,14 @@
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">Mercedes Grand Sedan</a></h2>
     						<div class="d-flex mb-3">
-	    						<span class="cat">SUV</span>
-	    						<p class="price ml-auto">₹500 <span>/day</span></p>
+	    						<!-- <span class="cat">SUV</span>
+	    						<p class="price ml-auto">₹500 <span>/day</span></p> -->
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<!-- <p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p> -->
     					</div>
     				</div>
     			</div>
-    			<div class="col-md-4">
+    			<!-- <div class="col-md-4">
     				<div class="car-wrap rounded ftco-animate">
     					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car-img4.jpeg);">
     					</div>
@@ -243,7 +251,7 @@
     					</div>
     				</div>
     			</div>
-    		</div>
+    		</div> -->
     		<!-- <div class="row mt-5">
           <div class="col text-center">
             <div class="block-27">
