--- a/blog-single.html
+++ b/blog-single.html
@@ -31,10 +31,10 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <link rel="icon" type="image/png" sizes="192x192" href="vedant_logo.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="vedant_logo.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="vedant_logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="vedant_logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
   </head>
   <body>
     
