--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,10 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <link rel="icon" type="image/png" sizes="192x192" href="vedant_logo.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="vedant_logo.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="vedant_logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="vedant_logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
   </head>
   <body>
     
@@ -128,8 +128,7 @@
         <div class="row justify-content-center">
         	<div class="col-md-12">
         		<div id="map" class="bg-white">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10440.527766159468!2d73.67481430653179!3d24.54414410021032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1738520123208!5m2!1sen!2sin" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14516.448079553918!2d73.6899933653631!3d24.550790767974902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3967ef00acb6de8b%3A0x2b1f0522a42f5bb7!2sVedant%20tours!5e0!3m2!1sen!2sin!4v1738696979185!5m2!1sen!2sin" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div>
         	</div>
         </div>
       </div>
